# StarkShift

./: Dockerfile  README.md  pyproject.toml
config/: config.yml
starknet_arbitrage/: __main__.py  arbitrage.py  price_monitor.py  starknet.py
starknet_arbitrage/core/: types.py
starknet_arbitrage/exchange/: base.py
starknet_arbitrage/exchange/cex/: binance.py
starknet_arbitrage/exchange/dex/: avnu.py
starknet_arbitrage/strategies/amounts/: base.py
starknet_arbitrage/strategies/spread/: base.py  simple.py
starknet_trades/exchange/: base.py  binance.py
starkshift/: __main__.py
starkshift/core/: types.py
starkshift/exchange/: base.py
starkshift/strategies/amounts/: __init__.py  simple.py
starkshift/strategies/spread/: __init__.py
