[tool.poetry]
name = "starknet-arbitrage"
version = "0.1.0"
description = "An arbitrage CEX-DEX, DEX-DEX bot operating on starknet."
authors = ["Matteo Lisotto <matteo.lisotto@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
starknet-py = "^0.22.0"
python-dotenv = "^1.0.1"
ccxt = "^4.3.56"
rich = "^13.7.1"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
